<resources>
    <string name="app_name">Shostir Bazaar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="zero">0</string>
    <string name="product">Product</string>
    <string name="product_categories">Product Categories</string>
    <string name="no_connection">No Connection</string>
    <string name="product_title">Product Title</string>
    <string name="_4_0_5">Ratting: 4.0/5</string>
    <string name="_0_0">$ 0.0</string>
    <string name="sold_0">Sold: 0</string>
    <string name="buy">Buy</string>
    <string name="add_card">Add Card</string>
    <string name="product_details">Product Details</string>
    <string name="register">Register</string>
    <string name="username">UserName</string>
    <string name="email">Email</string>
    <string name="password_hint">********</string>
    <string name="user_register">User Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="user_login">User Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="full_name">Full Name</string>
    <string name="cart_menu">Cart Menu</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="upload">upload</string>
    <string name="save">save</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="dashboard">Dashboard</string>
    <string name="log_out">Log out</string>
    <string name="total_price">Total Price:</string>
    <string name="price">price</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="checkout">Checkout</string>
    <string name="clear_all">Clear All</string>
    <string name="products">Products</string>
    <string name="total">Total $   %s</string>
    <string name="delivery_charge">Delivery Charge $   %s</string>
    <string name="subtotal">SubTotal $   %s</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="confirm">confirm</string>
    <string name="please_wait">Please Wait...</string>
    <string name="upload_image">Upload Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="from">from</string>
</resources>