<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="5dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_cart_item_product_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_cart_item_product_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingEnd="20dp"
            android:text="@string/product_title"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/iv_cart_item_delete"
            app:layout_constraintStart_toEndOf="@id/iv_cart_item_product_image"
            app:layout_constraintTop_toTopOf="@id/iv_cart_item_product_image" />

        <ImageView
            android:id="@+id/iv_cart_item_delete"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="5dp"
            android:src="@drawable/icon_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_cart_item_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/price"
            android:textColor="@color/blue_light"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_cart_item_product_title"
            app:layout_constraintTop_toBottomOf="@id/tv_cart_item_product_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_cart_item_plus"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_border"
                android:gravity="center"
                android:text="@string/plus"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_cart_item_product_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_cart_item_minus"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_border"
                android:gravity="center"
                android:text="@string/minus"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>